# rust-exercises

./: .gitignore  rust.code-workspace
rust_for_web/: Cargo.toml
rust_for_web/c00-axum/: Cargo.toml
rust_for_web/c00-tokio/: Cargo.toml  README.md
rust_for_web/c00-tokio/examples/: conccurency.rs
rust_for_web/c00-tokio/src/: main.rs
rust_for_web/c01-axum/: Cargo.toml
rust_for_web/c01-axum/src/: main.rs
rust_for_web/c01-diesel/: Cargo.toml  README.md
rust_for_web/c01-diesel/src/: router.rs
rust_for_web/c02-diesel/: .env  Cargo.toml  README.md
rust_for_web/c02-diesel/migrations/2024-03-14-093845_create_users/: up.sql
rust_for_web/c02-diesel/migrations/2024-03-14-094009_create_posts/: up.sql
rust_for_web/c02-diesel/src/: lib.rs  main.rs  schema.rs
rust_for_web/c02-diesel/src/models/: user.rs
rust_for_web/c02-diesel/src/services/: user.rs
rust_for_web/c02-sqlx/: .env  Cargo.toml
rust_for_web/c02-sqlx/db/: create_users.sql  data.db
rust_for_web/c02-sqlx/src/: main.rs  router.rs
rust_for_web/c02-sqlx/src/dtos/: user.rs
rust_for_web/c02-sqlx/src/models/: user.rs
rust_for_web/c02-sqlx/src/services/: user.rs
rust_for_web/c03-diesel/: Cargo.toml  README.md
rust_for_web/c03-diesel/db/: data.db
rust_for_web/c03-diesel/migrations/2024-03-14-093845_create_users/: up.sql
rust_for_web/c03-diesel/migrations/2024-03-14-094009_create_posts/: up.sql
rust_for_web/c03-diesel/src/: lib.rs  main.rs  router.rs  schema.rs
rust_for_web/c03-diesel/src/models/: user.rs
rust_for_web/c03-diesel/src/services/: user.rs
rust_for_web/c03-mongo/: Cargo.toml
rust_for_web/c04-mongo/: Cargo.toml
rust_for_web/c04-mongo/crates/model/src/: post.rs
rust_for_web/c04-mongo/crates/routes/src/: post.rs
rust_for_web/c04-mongo/src/: main.rs
rust_for_web/c05-yew/: Cargo.toml  index.html
rust_for_web/c05-yew/src/: main.rs
rust_for_web/c06-tracing/: Cargo.toml
rust_for_web/c06-tracing/src/: main.rs
rust_for_web/c07-gardener-test/: Cargo.toml  config.toml
rust_for_web/c07-gardener-test/src/: main.rs
rust_for_web/playground/: Cargo.toml
rust_for_web/playground/src/: lib.rs  main.rs  models.rs  services.rs
rust_for_web/slides/: index.md  package-lock.json
unsafe_rust/: Cargo.toml
unsafe_rust/c00-unsafe-options/: Cargo.toml
unsafe_rust/c00-unsafe-options/src/: lib.rs  main.rs
unsafe_rust/c01-raw-pointers/: Cargo.toml
unsafe_rust/c01-raw-pointers/src/: main.rs
unsafe_rust/c02-c-strings/: Cargo.toml
unsafe_rust/c02-c-strings/src/: main.rs
unsafe_rust/c03-ffi/: Cargo.toml
unsafe_rust/c04-linked-list/: Cargo.toml
unsafe_rust/pres/: Cargo.toml
unsafe_rust/slides/: index.md  package.json
(+20 files in other folders)
