[package]
name = "c03-diesel"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel = { version = "2.1.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenv = "0.15.0"
